--- a/docs/assets/css/estilos.css
+++ b/docs/assets/css/estilos.css
@@ -28,7 +28,7 @@ body{
 	width: 90%;
 	padding: 15px 0;
 	margin-bottom: 20px;
-	background: #f9bd4c;
+	background: rgba(255,151,54,0.9);
 
 	text-align: center;
 	text-decoration: none;
