--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -55,4 +55,8 @@ a:focus, a:hover, a:active {
 .filtros .filtro:hover {
   background: #f2bb51;
 }
+model-viewer {
+  width: 100%;
+  margin: auto;
+}
 
